--- a/index.htm
+++ b/index.htm
@@ -18,7 +18,7 @@
                 <h1>Zarejestruj się jako trener</h1>
                 <button class="regButton">
                     <div class="iconHolder">
-                        <img class="icon" src="fbIcon.png" id="fbIcon"/>
+                        <img class="icon" src="fbIcon.png" alt="facebook icon"/>
                     </div><!--
                     --><div class="iconButtonTextHolder">
                         <span>Rejestracja przez Facebook</span>
@@ -26,7 +26,7 @@
                 </button>
                 <button class="regButton">
                     <div class="iconHolder">
-                        <img class="icon" src="instaIcon.png" />
+                        <img class="icon" src="instaIcon.png" alt="instagram icon"/>
                     </div><!--
                     --><div class="iconButtonTextHolder">
                         <span>Rejestracja przez Instagram</span>
