Dodałem rozwiązanie z użyciem display flex

--- a/index.htm
+++ b/index.htm
@@ -52,7 +52,7 @@
                     <input class="inputSmall" type="text" name="inputLastName" placeholder="  Last name..." id="lastName">
                 </div>
                 <input class="inputBig" type="text" name="inputEmail" placeholder="  Email address..." id="emailAddress">
-                <input class="inputBig" type="text" name="inputPassword" placeholder="  Password..." id="password">
+                <input class="inputBig" type="password" name="inputPassword" placeholder="  Password..." id="password">
                 <input type="checkbox" name="checkBoxtermsAndConditionsAgreement" id="termsAndConditionsAgreement">
                 <label for="termsAndConditionsAgreement">I have read the <a href="http:\\www.google.com" target="_blank">Terms & Conditions</a></label>
                 <button class="formRegisterButton" type="submit">Zarejestruj się za darmo</button>
